# unpadded

./: .clang-tidy  .gitignore  CMakeLists.txt
cmake/module/: Genex.cmake  Linting.cmake  NormalizePath.cmake  ParseCliArguments.cmake  Paths.cmake  RequireDefined.cmake  ScriptAsCommand.cmake  Unpadded.cmake
cmake/script/: run-include-what-you-use.cmake  touch.cmake
example/: CMakeLists.txt  dynamixel-protocol-2.0.cpp
include/: CMakeLists.txt
include/upd/: basic_ibytestream.hpp  basic_obytestream.hpp  basic_tuple.hpp  constexpr.hpp  description.hpp  functional.hpp  integer.hpp  keyring.hpp  literals.hpp  named_tuple.hpp  named_value.hpp  ref.hpp  static_vector.hpp  template_traits.hpp  token.hpp  tuple.hpp  type_traits.hpp  upd.hpp
include/upd/detail/: ascii_to_integer.hpp  fail_unless_discarded.hpp  has_value_member.hpp  integral_constant.hpp  is_instance_of.hpp  range.hpp  sequence.hpp  static_storage.hpp  tuple_operations.hpp
include/upd/detail/variadic/: all_of.hpp  at.hpp  concat.hpp  count.hpp  diff.hpp  equals.hpp  filter.hpp  find.hpp  flatten.hpp  leaf.hpp  map.hpp  product.hpp  sum.hpp  to_array.hpp
test/: CMakeLists.txt  basic_ibytestream.cpp  basic_obytestream.cpp  basic_tuple.cpp  integer.cpp  literals.cpp
test/detail/variadic/: clean.cpp  clip.cpp  concat.cpp  product.cpp
test/mock/: serializer_interface.hpp
